Fix letter spacing in paragraphs

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,7 +16,8 @@ dl, dd, ol, ul, figure {
 body {
     font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
     color: $text-color;
-    letter-spacing: 0.003em;
+    letter-spacing: -0.003em;
+    line-height: 1.58em;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
     -webkit-font-feature-settings: "kern" 1;
